--- a/index.html
+++ b/index.html
@@ -17,33 +17,33 @@
                     <img src="./img//instagram-logo.png" alt="Instagram logo" title="Instagram logo" />
                 </h1>
                 <form>
-                    <label for="email" class="sr-only">Telefone, nome de usuário ou e-mail</label>
+                    <label for="email" class="sr-only">Phone, username or email</label>
                     <input name="email" placeholder="Telefone, nome de usuário ou e-mail" />
 
-                    <label for="password" class="sr-only">Senha</label>
+                    <label for="password" class="sr-only">Password</label>
                     <input name="password" type="password" placeholder="Senha" />
 
-                    <button type="button">Entrar</button>
+                    <button type="button">Enter</button>
                 </form>
                 <div class="flex separator align-items-center">
                     <span></span>
-                    <div class="or">OU</div>
+                    <div class="or">OR</div>
                     <span></span>
                 </div>
                 <div class="login-with-fb flex direction-column align-items-center">
                     <div>
                         <img />
-                        <a>Entrar com o facebook</a>
+                        <a>Enter with facebook</a>
                     </div>
-                    <a href="#">Esqueceua senha?</a>
+                    <a href="#">Forget about the password?</a>
                 </div>
             </div>
             <div class="panel register flex justify-content-center">
-                <p>Não tem uma conta?</p>
-                <a href="#">Cadastre-se</a>
+                <p>Don't have an account?</p>
+                <a href="#">Register</a>
             </div>
             <div class="app-download flex direction-column align-items-center">
-                <p>Obtenha o aplicativo.</p>
+                <p>Get the app.</p>
                 <div class="flex justify-content-center">
                     <img src="./img/apple-button.png"      alt="Imagem com a logo da Apple Store" title="Imagem com a logo da Apple Store" />
                     <img src="./img/googleplay-button.png" alt="Imagem com a logo da Google Play" title="Imagem com a logo da Google Play" />
