--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 </h1>
                 <form>
                     <label for="email" class="sr-only">Phone, username or email</label>
-                    <input name="email" placeholder="Telefone, nome de usuário ou e-mail" />
+                    <input name="email" placeholder="Phone, username or email" />
 
                     <label for="password" class="sr-only">Password</label>
-                    <input name="password" type="password" placeholder="Senha" />
+                    <input name="password" type="password" placeholder="Password" />
 
                     <button type="button">Enter</button>
                 </form>
