--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <label for="password" class="sr-only">Password</label>
                     <input name="password" type="password" placeholder="Password" />
 
-                    <button type="button">Enter</button>
+                    <button type="button" class="enter">Enter</button>
                 </form>
                 <div class="flex separator align-items-center">
                     <span></span>
