--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 </h1> 
                 <form>
                     <label for="email" class="sr-only">Phone, username or email</label>
-                    <input name="email" placeholder="Phone, username or email" />
+                    <input name="email" class="email" placeholder="Phone, username or email" />
 
                     <label for="password" class="sr-only">Password</label>
-                    <input name="password" type="password" placeholder="Password" />
+                    <input name="password" class="password" type="password" placeholder="Password" />
 
                     <button type="button" class="enter">Enter</button>
                 </form>
