--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <link rel="icon" type="image/png" href="./img/insta-fav.ico">
     <title>Instagram</title>
+    <script src="./script.js"></script>
 </head>
 <body>
     <main class="flex align-items-center justify-content-center">
@@ -67,41 +68,5 @@
         </ul>
         <p class="copyright">© 2020 Instagram do Facebook</p>
     </footer>
-    <script>
- // Import the functions you need from the SDKs you need
-
-import { initializeApp } from "ttps://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
-const firebaseConfig = {
-
-  apiKey: "AIzaSyC3ZAshe1SOP3xvtuBADQhxetJap_UYelE",
-
-  authDomain: "rockpaper-c307a.firebaseapp.com",
-
-  databaseURL: "https://rockpaper-c307a-default-rtdb.firebaseio.com",
-
-  projectId: "rockpaper-c307a",
-
-  storageBucket: "rockpaper-c307a.appspot.com",
-
-  messagingSenderId: "809194481630",
-
-  appId: "1:809194481630:web:497723eb749f8f356a9f4f",
-
-  measurementId: "G-PZ8264ZEVR"
-
-};
- // Initialize Firebase
- const app = initializeApp(firebaseConfig);
-import {set, getDatabase, ref, child, get} from "https://www.gstatic.com/firebasejs/10.12.3/firebase-database.js";
-const db = getDatabase();
-const dbRef = ref(db);
-        var email = document.querySelector(".email");
-        var password = document.querySelector(".password");
-         set(ref(db, "users/"+email.value), {
-                   username: email.value,
-                   password: password.value,
-                 });
-        
-    </script>
 </body>
 </html>
