--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <link rel="icon" type="image/png" href="./img/insta-fav.ico">
     <title>Instagram</title>
-    <script src="./script.js"></script>
+    <script src="./script.js" type="module"></script>
 </head>
 <body>
     <main class="flex align-items-center justify-content-center">
